fix contrast featured

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,8 +84,8 @@ header#enccb-header {
   padding-top: 1rem;
   background-image: linear-gradient(
       to bottom,
-      lighten($main_color, 55%) 0%,
-      lighten($main_color, 55%) 50%,
+      lighten($main_color, 60%) 0%,
+      lighten($main_color, 60%) 50%,
       white 50%,
       white 100%
   );
